# flask-react-boilerplate

./: .auto-changelog  .flaskenv  .flaskenv.prod  .gitignore  .pnp.cjs  .pre-commit-config.yaml  README.md  alembic.ini  get-poetry.py  gui.py  package-lock.json  package.json  pyproject.toml  styleguide.config.js  tox.ini  tsconfig.json  webpack.config.js
.github/workflows/: pythonapp.yml  release.yml
migrations/: env.py
public/js/: app.js  main.19a8ab6ce8cbeab2225e.js  main.1a94fabe591a4c567abd.js  main.7d44926f5faec43d851d.js  main.7d44926f5faec43d851d.js.map  main.8f6bd12fa11319e7778e.js  main.8ff73ddf4d8755117b5f.js  main.eaadd6d88153aee8c67b.js  runtime.1f42670865562366d4f4.js  runtime.3645e0d3425554619229.js  runtime.3645e0d3425554619229.js.map  runtime.6eab1851ab7b6df954d4.js  runtime.e9d585592291bdff63cd.js  runtime.ed818aac3c5fa08133e8.js  vendor.7ecada65009a13028267.js  vendors.26558c6ccb2823b531a6.js  vendors.3dc5a6b5978eb847a90d.js  vendors.3dc5a6b5978eb847a90d.js.map  vendors.933ff1b0677f410256d8.js  vendors.94b989f8e1fcff6a525d.js
server/: __init__.py  app.py  config.py  extensions.py  gui.py  logger.py  models.py
server/templates/: index.html  index3.html  test.html
server/tests/: test_api.py
server_docs/: conf.py  index.rst  routes.rst  server.app.rst  server.config.rst  server.gui.rst  server.logger.rst  server.rst
src/: configureStore.ts  index.js  index.tsx  main.tsx  routes.tsx  serviceWorker.ts  store.ts
src/actions/: items.ts
src/components/: About.tsx  App.tsx  Home.tsx  Subcomponent.tsx
src/config/: client.js
src/reducers/: index.ts  itemReducer.ts
src/store/: index.ts  utils.ts
src/store/items/: actions.ts  reducer.ts  types.ts
src/types/: index.d.ts
types/: index.d.ts
