[tool.poetry]
name = "sample"
version = "0.1.0"
description = "Flask and React"
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.24.2"
loguru = ">=0.2.5"
flexx = "^0.8.0"
eel = ">=0.11.0"
pysimpleguiwx = ">=0.13.1"
pysimplegui = ">=4.4.1"
wxpython = "^4.0.6"
pysimpleguiQt = "^0.28.0"
pyside2 = "^5.13.1"
sqlalchemy = "^1.3.11"
alembic = "^1.3.1"
sqlalchemy_mixins = "^1.1"
xlrd = "^1.2.0"
flaskwebgui = "^0.1.6"
flask-caching = "^1.8.0"
dill = "^0.3.1"
marshmallow = "^3.4.0"
flask-sqlalchemy = "^2.4.1"
flask_marshmallow = "^0.11.0"
flask-marshmallow = "^0.11.0"
marshmallow_sqlalchemy = "^0.22.2"


[tool.poetry.dev-dependencies]
black = {version = ">=18.3-alpha.0",allow-prereleases = true}
snoop = "^0.2.1"
sphinx = "^2.0"
doc8 = "^0.8.0"
sphinx-autodoc-typehints = "^1.6"
flake8 = "^3.7"
tox = "^3.12"
pytest = "^4.6"
sphinx-rtd-theme = "^0.4.3"
docutils ="^0.15.0, !=0.15.1" #0.15.1 is broken in python3 https://sourceforge.net/p/docutils/bugs/370/
jupyter = "^1.0"
ipykernel = "^5.1"
toga-demo = {version = "^0.3.0-alpha.14", allow-prereleases = true}
PyInstaller = "^3.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
