[tool.poetry]
authors = ["Tyler Baur"]
description = "Flask and React"
name = "test"
version = "v0.1.0"

[tool.poetry.dependencies]
datedelta = "^1.3"
flaskwebgui = "^0.1.6"
loguru = ">=0.2.5"
pandas = ">=0.24.2"
python = "^3.7, !=3.8"

Flask = "^2.0.1"
myst-parser = "^0.12.0"
python-dotenv = "^0.14.0"
sqlalchemy-mixins = "^1.5"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]
black = {version = ">=18.3-alpha.0", allow-prereleases = true}
darglint = "^1.3.0"
doc8 = "^0.8.0"
docutils = ">0.15.1"
flake8 = "^3.7"
isort = "^5.0.0"
pre-commit = "^2.3.0"
pytest = "^6.0"
sphinx = "^3.2"
sphinx-autodoc-typehints = "^1.6"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-apidoc = "^0.3.0"
sphinxcontrib-httpdomain = "^1.7.0"
toml = "^0.10.1"
tomlkit = "^0.7.0"
tox = "^3.12"
# PyInstaller= "^3.6"
PyInstaller = {git = 'https://github.com/pyinstaller/pyinstaller.git', branch = 'develop'} 
pefile = "^2019.4.18" 
pywin32-ctypes = "^0.2.0" # WINDOWS

[tool.isort]
# https://github.com/timothycrosley/isort/
default_section = "FIRSTPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
line_length = 88
multi_line_output = 3
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "migrations/**,.venv/**,idexx_app/frontend/**,get-poetry.py"
use_parentheses = true

[tool.black]
# https://github.com/psf/black
exclude = "(migrations|.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"
line-length = 88
target-version = ["py37"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"] #,"briefcase"]
